####################
PloneArticle Changes
####################

4.1.10 (svn)
############

* Commented out isinstance checks in fileinnercontentproxy and
  imageinnercontentproxy. they break functionality when plone.app.blob is used.
  [rnix]

4.1.9
#####

* Set "content-disposition" header for files as in ATFile
  [glenfant]

4.1.8
#####

* Fixed too restrictive security issue : anonymous users couldn't see embedded
  images/files. See issue #35
  [glenfant]

4.1.7
#####

* Show only attachments and images available to the user such an
  anonymous user is not rejected when viewing a public article that
  references a private file.
  http://plone.org/products/plonearticle/issues/34
  [glenfant]

4.1.6
#####

* Fixed packaging error (only .py files in the egg)
  [glenfant]

* Added mising (empty) migration paths.

* Doc errors found and fixed.

4.1.5
#####

* Fix pa_browser url : url is no more depending on base href
  [macadames] 2009-06-05

* Fix ajax images player launched to soon sometimes
  $document.ready replaced by $window.load
  [macadames] 2009-09-04

* Fix jQuery syntax (tag[@attribute=value] replaced by tag[attribute=value])
  (perhaps a new version of jquery.js used in Plone 3.3 ?)
  [macadames] 2009-09-04

4.1.4
#####

* Identical release (egg generation failed)
  [glenfant]

4.1.3
#####

* IE6 fix for the javascript image viewer

* Fix migration path for all 4.1 releases
  [encolpe] 2009-02-26

4.1.2
#####

* Added russian translation, thanks to Roman Susi.
  [glenfant] 2009-01-30

* Activate collapsible sections after reloading model view in ajax
  [macadames] 2009-02-04

Take care : 4.1.1 egg was containing an old file : kssregistry.xml
A bug with collective.releaser ?

4.1.1
#####

* Kss inline edit for proxies (images, files, links)
  replaced by jQuery methods
  This resolve getSiteManager error with iw.fss in kss server views (strange bug)
  [macadames] 2009-01-22

* When editing proxies fields and closing ajax window very fast, the page was