@@ -2,9 +2,10 @@
 
   <!-- this utility is here to avoid having "PloneArticle" listed
        twice in quickinstaller. -->
+<!--
   <utility factory=".setuphandlers.HiddenProductsNProfiles"
            name="Products.PloneArticle" />
-
+-->
   <include file="profiles.zcml"/>
   <include file="implements.zcml"/>
   <include file="adapters.zcml"/>
