@@ -68,7 +68,9 @@
             <tal:block tal:define="objs python:accessor();
                                    widget_container_id string:${fieldName}-innercontent;
                                    widget_index_id string:${fieldName}-innercontent-index;
-                                   inner_content_macros inner_content_macros | here/pa_baseinnercontentwidget/macros;">
+                                   inner_content_macros inner_content_macros | here/pa_baseinnercontentwidget/macros;
+																	 here_url context/absolute_url;
+																	 portal_url context/@@plone_portal_state/portal_url">
   
               <div id="articleActions"
                    tal:define="type type |string:content;
