@@ -29,7 +29,9 @@
 
     <metal:inner_content define-macro="inner_content">
 
-      <tal:proxy define="file_id       proxy/getId;
+      <tal:proxy define="portal 			 context/@@plone_portal_state/portal;
+												 portal_url    context/@@plone_portal_state/portal_url;
+												 file_id       proxy/getId;
                          title         proxy/Title;
                          description   proxy/Description;
                          file_path     proxy/getPhysicalPath;
@@ -148,7 +150,7 @@
             method="post" enctype="multipart/form-data"
          onsubmit="return Proxy.sendForm();"
             tal:define="target_upload_script target_upload_script | string:pa_innerimage_upload;"
-            tal:attributes="action string:${here_url}/${target_upload_script};">
+            tal:attributes="action string:${context/@@plone_context_state/object_url}/${target_upload_script};">
 
         <input type="hidden" id="field_name" name="field_name" value="fieldName" tal:attributes="value fieldName;" />
 
